# litetorch

./: README.md  TODO.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install.sh
.github/: ci.yaml
.github/workflows/: ci.yaml
docs/: design_midset.md
examples/: explore_data_wdbc.ipynb
litetorch/core/: add_function.py  binary_cross_entropy_function.py  cross_entropy_function.py  div_function.py  function.py  leaky_relu_function.py  mse_function.py  softmax_function.py  sub_function.py  tensor.py
litetorch/data/: split.py
litetorch/loss/: base.py  binary_cross_entropy.py  cross_entropy.py  mse.py
litetorch/nn/: activation.py  linear.py  module.py  sequential.py
litetorch/optim/: base.py
litetorch/utils/: function.py
src/litetorch/core/: binary_cross_entropy_function.py  matmul_function.py  mse_function.py  mul_function.py  relu_function.py  sigmoid_function.py  softmax_function.py  tanh_function.py  tensor.py
src/litetorch/data/: dataloader.py  split.py
src/litetorch/loss/: cross_entropy.py  mse.py
src/litetorch/nn/: activation.py  linear.py  module.py  sequential.py
src/litetorch/nn/loss/: __init__.py  base.py  binary_cross_entropy.py  cross_entropy.py  mse.py
src/litetorch/optim/: SGD.py
src/litetorch/training/: trainer.py
src/litetorch/utils/: logger.py  registry.py  save_load.py
tests/: conftest.py  test_SGD.py  test_activation.py  test_linear.py  test_loss.py  test_module.py  test_save_load.py  test_split.py  test_squential.py  test_tensor.py
