[tool.poetry]
name = "litetorch"
version = "0.1.0"
description = "A homemade deep learning framework for learning"
authors = ["LeaYeh <lea.yeh.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"
seaborn = "*"
torch = "*"
datasets = "*"
plotly = "*"
tqdm = "*"
ipywidgets = "*"
notebook = "*"
jupyterlab = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
